<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">生存战争世界编辑器</string>
    <string name="select_a_.scworld_file">选择一个 .scworld 文件</string>
    <string name="world_name">世界名称</string>
    <string name="load_failed">加载失败: %s</string>
    <string name="save_failed">保存失败: %s</string>
    <string name="unzip_failed">解压失败</string>
    <string name="zip_failed">压缩失败</string>
    <string name="some_file_not_found">文件 %s 不存在</string>
    <string name="save">保存</string>
    <string name="saved_successfully">保存成功</string>
    <string name="world_settings">世界设置</string>
    <string name="player_settings">玩家设置(仅主玩家)</string>
    <string name="player_name">玩家名</string>
    <string name="game_mode">游戏模式</string>
    <string name="starting_position_mode">出生点难度</string>
    <string name="player_level">等级</string>
    <string name="player_health">血量</string>
    <string name="gamemode_survival">生存</string>
    <string name="gamemode_cruel">残酷</string>
    <string name="gamemode_harmless">无害</string>
    <string name="gamemode_creative">创造</string>
    <string name="gamemode_challenging">挑战</string>
    <string name="import_world_tips">导入世界时若出现 "Acess ...Regions Denied" 的报错，请忽略它，这不会影响世界导入</string>
    <string name="position">位置</string>
    <string name="inventory">物品栏</string>
    <string name="edit_item">编辑物品</string>
    <string name="edit_count">修改数量</string>
    <string name="pick_an_item">选择物品</string>
    <string name="count">数量</string>
    <string name="_path_items_display_name">items_zh.json</string>
    <string name="unable_to_edit_item_warnings">暂时无法编辑空物品</string>
    <string name="search">搜索</string>
    <string name="game_version">游戏版本</string>
    <string name="season">季节(不精确)</string>
    <string name="season_early_spring">早春</string>
    <string name="season_spring">春天</string>
    <string name="season_late_spring">晚春</string>
    <string name="season_early_summer">初夏</string>
    <string name="season_summer">盛夏</string>
    <string name="season_late_summer">末夏</string>
    <string name="season_early_autumn">初秋</string>
    <string name="season_autumn">秋天</string>
    <string name="season_late_autumn">深秋</string>
    <string name="season_early_winter">初冬</string>
    <string name="season_winter">冬天</string>
    <string name="season_late_winter">深冬</string>
    <string name="only_2.4">仅2.4</string>
    <string name="time_of_year">今年进度</string>
    <string name="delete">删除</string>
    <string name="delete_confirm">确定删除</string>
    <string name="put_out_fire">灭火</string>
    <string name="clear_flu">清除感冒</string>
    <string name="quick_options">快捷设置</string>
    <string name="add_item">添加物品</string>
    <string name="wait_items_loaded">请等待物品加载完成，剩余 %s 个</string>
    <string name="version_may_not_be_compatible">当前存档非2.3及以上版本，可能不兼容</string>
    <string name="year_days">一年长度 / 天</string>
    <string name="gender">性别</string>
    <string name="hunger">饥饿值</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="clear_sick">清除生病</string>
</resources>
